[mod] config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Noly-Poly
 description:
 theme: just-the-docs
 
-url: https://nolypoly.github.io
+url: https://jisu-yang.github.io/nolypoly.github.io
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Template Repository: https://github.com/jisu-yang/nolypoly.github.io
