[mod] config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ title: Noly-Poly
 description:
 theme: just-the-docs
 
-url: https://jisu-yang.github.io/nolypoly.github.io
+url: https://jisu-yang.github.io/
 
 aux_links:
-  Template Repository: https://github.com/jisu-yang/nolypoly.github.io
+  "Just the Docs on GitHub":
+    - "//github.com/just-the-docs/just-the-docs"
