--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,9 @@ url: https://jisu-yang.github.io/
 aux_links:
   "Just the Docs on GitHub":
     - "//github.com/just-the-docs/just-the-docs"
+
+# External navigation links
+nav_external_links:
+  - title: Just the Docs on GitHub
+    url: https://github.com/just-the-docs/just-the-docs
+    hide_icon: false # set to true to hide the external link icon - defaults to false
