[feat] 목차/toc 기능이 추가된 post 레이아웃 추가
- jekyll-toc 플러그인 사용하여 toc 기능 구현
- 반응형으로 1500px 이상일때 우측에 목차 영역 표시

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,9 @@ theme: just-the-docs
 url: https://jisu-yang.github.io/
 #baseurl: 'jisu-yang.github.io/'
 
+plugins:
+  - jekyll-toc
+
 # ---Search ---
 
 # Enable or disable the site search
