[feat] _config.yml, 코드블럭 복사 기능 추가

--- a/_config.yml
+++ b/_config.yml
@@ -33,3 +33,6 @@ search.preview_words_after: 10
 # Enable or disable the search button that appears in the bottom right corner of every page
 # Supports true or false (default)
 search.button: true
+
+# ---Code Block---
+enable_copy_code_button: true
