--- a/_config.yml
+++ b/_config.yml
@@ -38,3 +38,8 @@ search.button: true
 enable_copy_code_button: true
 
 
+# Set a path/url to a logo that will be displayed instead of the title
+logo: "/assets/images/logo.gif"
+
+# Set a path/url to a favicon that will be displayed by the browser
+favicon_ico: "/assets/images/favicon.ico"
