[fix] .gitignore, 임시 글 폴더 추가

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,5 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij
+
+docs/archive/temp/
